@@ -1,6 +1,6 @@
 settings/xfpm-settings.c
 settings/xfpm-settings-main.c
-settings/xfce4-power-manager.desktop.in
+settings/xfce4-power-manager-settings.desktop.in
 src/xfpm-battery.c
 src/xfpm-battery-info.c
 src/xfpm-button-xf86.c
@@ -10,7 +10,6 @@ src/xfpm-battery.c
 src/xfpm-idle.c
 src/xfpm-main.c
 src/xfpm-cpu.c
-src/xfpm-notify.c
 src/xfpm-supply.c
 src/xfpm-network-manager.c
 src/xfpm-dpms.c
@@ -18,19 +17,22 @@ src/xfpm-tray-icon.c
 src/xfpm-engine.c
 src/xfpm-adapter.c
 src/xfpm-manager.c
-libxfpm/xfpm-common.c
-libxfpm/xfpm-string.c
+src/xfpm-inhibit.c
+src/xfpm-screen-saver.c
+src/xfce4-power-manager.desktop.in
+libxfpm/hal-proxy.c
 libxfpm/hal-battery.c
 libxfpm/hal-device.c
-libxfpm/xfpm-dbus.c
-libxfpm/xfpm-popups.c
 libxfpm/hal-marshal.c
 libxfpm/hal-manager.c
 libxfpm/hal-power.c
 libxfpm/hal-battery.c
+libxfpm/xfpm-common.c
+libxfpm/xfpm-string.c
+libxfpm/xfpm-dbus.c
+libxfpm/xfpm-popups.c
+libxfpm/xfpm-notify.c
 panel-plugins/brightness/brightness-plugin.c
 panel-plugins/brightness/xfce4-brightness-plugin.desktop.in.in
 panel-plugins/inhibit/inhibit-plugin.c
 panel-plugins/inhibit/xfce4-inhibit-plugin.desktop.in.in
-src/xfce4-power-manager.desktop.in
-settings/xfce4-power-manager.desktop.in
