@@ -1,4 +1,7 @@
 
+2009-03-24 16:34 Ali aliov@xfce.org 
+	 * : Fix missing files in the POTFILES+rename the settings desktop file
+
 2009-03-24 16:18 Ali aliov@xfce.org 
 	 * : Generate random cookie on the inhibit+some optimizations
 
